# contri-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  frontend_implementation.md  implementation.md  pyproject.toml  verify_auth_changes.py  verify_setup.py  verify_social_login.py
alembic/: env.py
alembic/versions/: 05108d4cf343_initial_schema.py  6eb537c1ad4c_add_join_date_to_circlemember.py  702493780a6b_initial_migration.py  7f57bef212da_add_current_cycle_to_circle.py  c72d39c2b06e_add_circle_management_fields.py  fb7db7a0d12e_add_circle_id_to_wallet_and_make_user_.py  feb62caa3e4d_add_transactions_and_update_wallet.py
app/: admin.py  main.py  worker.py
app/api/: deps.py
app/api/v1/: api.py
app/core/: celery_app.py  config.py  exception_handlers.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/email-templates/src/: base.html  circle_joined.html  circle_started.html  deposit_success.html  (+5 more)
app/models/: __init__.py  admin_log.py  chat.py  circle.py  enums.py  notification.py  transaction.py  user.py  wallet.py
app/schemas/: __init__.py  chat.py  circle.py  notification.py  response.py  token.py  user.py  wallet.py
app/services/: email.py  paystack.py
app/utils/: financials.py
scripts/: create_ethereal_account.py  reset_schema.py  seed_db.py  trigger_emails.py  verify_api.py
tests/: conftest.py  test_auth.py  test_chat_pagination.py  test_circles.py  test_circles_progress.py  test_circles_refactor.py  test_contribution.py  test_email_verification.py  test_financials.py  test_notifications.py  test_users.py  utils.py
(+9 files in other folders)
